# protocol-de-communication-polyorbite

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  coverage.sh  pyproject.toml
src/: gf.rs  lib.rs  main.rs  pack.rs  reed_solomon.rs  sign.rs  test.rs  utils.rs
src/gf/: mod.rs
src/reed_solomon/: mod.rs
