[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
ground-station = ["dep:pyo3"]
std = []
cubesat = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 =  {version="0.22.0", optional=true}

[dev-dependencies]
gf256 = "0.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
