[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[features]
default = ["ground-station"]
ground-station = []
cubesat = []
fuzz = []

[lib]
crate-type = ["rlib"]

[dev-dependencies]
gf256 = "0.3.0"
rand = "0.8.5"
reed-solomon-erasure = "6.0.0"
ax25 = "0.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crc-0x8810 = "0.1.0"
