[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[features]
default = ["ground-station"]
ground-station = ["dep:rand"]
cubesat = []
fuzz = []

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
rand = "0.8.5"
gf256 = "0.3.0"
reed-solomon-erasure = "6.0.0"
ax25 = "0.3.0"
sha256 = "1.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = { version = "0.8.5", optional = true }
crc-0x8810 = "0.1.0"
reed-solomon = "0.2"
ascon-aead = "0.4.2"
md5 = { version = "0.7.0", default-features = false }
